# gpdb

./: ._.  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  GNUmakefile.in  NOTICE  PULL_REQUEST_TEMPLATE.md  README.CentOS.bash  README.Docker.md  README.Linux.md  README.Rhel-Rocky.bash  README.Ubuntu.bash  README.debian  README.docker.md  README.linux.md  README.macOS.arm.bash  README.macOS.bash  README.macOS.md  README.md  README.win.md  README_pt_BR.md  aclocal.m4  clusterConfigFile  configure  configure.in  gpdemo-env.sh  hostfile  python-dependencies.txt  run.py
.abi-check/: README.md
.abi-check/6.25.3/: skip-postgres-symbols.txt
.abi-check/7.0.0/: postgres.symbols.ignore  postgres.types.ignore
.abi-check/7.1.0/: postgres.symbols.ignore
.github/: issue_template.md
.github/scripts/: gcc
.github/workflows/: greenplum-abi-tests.yml
certificate/gpfdists/: client.key  server.crt
ci/checkman/: README.md  install.bash  uninstall.bash
concourse/: README.md  gpcodegen_pipeline.yml  test_optfun_with_orca.yml
concourse/pipelines/: 5X_STABLE-generated.yml  README.md  gen_pipeline.py  gpdb_6X_STABLE-generated.yml  gpdb_github_release.yml  gpdb_main-generated.yml  gpdb_master-generated.yml  nbu_ddboost_pipeline.yml  pipeline.yml  pipeline_gpcloud.yml  pipeline_segwalrep.yml  pr_pipeline.yml  release_pipeline.yml
concourse/scripts/: backup_utils.sh  behave_gpdb.bash  build_gpdb.py  build_orca.py  combine_cli_coverage.bash  common.bash  compile_gpdb.bash  compile_gpdb_and_orca_with_conan_ubuntu16.bash  compile_gpdb_custom_config.bash  compile_gpdb_open_source.bash  compile_gpdb_open_source_ubuntu.bash  compile_gpdb_remote.bash  deb_create_package.bash  deb_test_package.bash  enterprise_deb_test_cluster.bash  failed_job.py  filedump_gpdb.bash  gen_mapr.sh  gpMgmt_check_gpdb.bash  gpMgmt_gpbackup.bash  gpcheckcloud_tests_gpcloud.bash  gpdb_github_release.bash  gpdb_pitr.bash  gsutil_sync  ic_gpdb.bash  ic_gpdb_remote.bash  ic_gpdb_remote_windows.bash  ic_gpdb_remote_windows.bat  ic_gpdb_resgroup.bash  ic_gpdb_resgroup_v2.bash  ic_gpdb_ubuntu.bash  ic_resgroup.bash  open_source_deb_test_cluster.bash  perfsummary.py  regression_tests_gphdfs.bash  regression_tests_pxf.bash  remove_non_production_files.bats  remove_non_production_files.sh  run_behave_test.sh  runtzcheck.py  (+5 more)
concourse/server_pipeline/: master_pipeline.yml  pr_pipeline.yml
concourse/tasks/: behave_gpdb.yml  bidi_scanner.yml  compile_gpdb.yml  compile_gpdb_remote_windows.yml  compile_gpdb_sles11.yml  deb_test_package.yml  gen_mapr.yml  gpMgmt_check_gpdb.yml  gpMgmt_gpbackup.yml  gpcheckcloud_tests_gpcloud.yml  gpdb_github_release.yml  ic_gpdb.yml  ic_gpdb_resgroup.yml  regression_tests_gpcloud.yml  regression_tests_gphdfs.yml  regression_tests_gphdfs_mapr.yml  run_behave.yml  run_behave_on_ccp_cluster.yml  run_explain_suite.yml  setup_new_gpdb_for_backup_restore.yml  test_with_orca_conan.yml  test_with_planner_conan.yml  tzcheck.yml
concourse/vars/: common_prod.yml
config/: ax_lib_curl.m4  c-compiler.m4  orca.m4  programs.m4  python.m4  python_both.m4  tcl.m4
contrib/: Makefile
contrib/adminpack/: adminpack.c
contrib/amcheck/: verify_nbtree.c
contrib/auto_explain/: Makefile  auto_explain.c  init_file
contrib/bloom/: blutils.c
contrib/btree_gin/: btree_gin.c
contrib/btree_gist/: Makefile
contrib/changetrackingdump/: Makefile
contrib/citext/: Makefile  citext--unpackaged--1.0.sql  citext.sql
contrib/dblink/: Makefile  dblink.c  dblink.h  dblink.sql  dblink_no_auth.c
contrib/external_table_file_exemplar/: Makefile  external_table_file_exemplar--1.0.sql  external_table_file_exemplar.c  external_table_file_exemplar.control
contrib/extprotocol/: gpextprotocol.c
contrib/file_fdw/: file_fdw.c
contrib/formatter_fixedwidth/: fixedwidth.c
contrib/gp_error_handling/: Makefile  gpexterrorhandle.c
contrib/gp_inject_fault/: gp_inject_fault.c
contrib/gp_replica_check/: gp_replica_check.c
contrib/indexscan/: indexscan.c
contrib/isn/: isn.sql.in
contrib/orca_debug/: orca_debug.cpp
contrib/pageinspect/: rawpage.c
contrib/passwordcheck/: Makefile
contrib/pg_upgrade/: .gitignore  Makefile  README.gpdb  aotable.c  (+22 more)
debian/: rules
depends/: README.md  conanfile_gpbackup.txt  conanfile_orca.txt
docker/: Dockerfile.centos5.build  Dockerfile.debian.build  Makefile  docker_entrypoint.sh
gpAux/: Makefile  Makefile.global
gpMgmt/: Makefile  Makefile.behave  requirements-dev.txt
gpcontrib/: Makefile
gpdb-doc/: README.md
hooks/: pre-push
src/: Makefile.global.in  Makefile.mock
src/backend/codegen/: .gitignore  CMakeLists.txt  ExecQual_codegen.cc  ExecVariableList_codegen.cc  Makefile  NOTICE  README.md  advance_aggregates_codegen.cc  codegen_wrapper.cc  const_expr_tree_generator.cc  exec_variable_list_codegen.cc  expr_tree_generator.cc  op_expr_tree_generator.cc  pg_date_func_generator.cc  slot_getattr_codegen.cc  var_expr_tree_generator.cc
src/backend/codegen/cmake/: FindClang.cmake  FindLLVMMonolithic.cmake
src/backend/codegen/examples/: CMakeLists.txt  README.md  materialize_tuple_ex.cc
src/backend/codegen/include/balerion/: annotated_type.h  annotated_type_detail.h  clang_compiler.h  code_generator.h  instance_method_wrappers.h  macros.h  temporary_file.h  utility.h
src/backend/codegen/include/codegen/: advance_aggregates_codegen.h  codegen_config.h  const_expr_tree_generator.h  expr_tree_generator.h  op_expr_tree_generator.h  pg_arith_func_generator.h  pg_func_generator.h  pg_func_generator_interface.h  var_expr_tree_generator.h
src/backend/codegen/include/codegen/utils/: clang_compiler.h  codegen_utils.h  gp_codegen_utils.h
src/backend/codegen/src/: clang_compiler.cc  code_generator.cc  temporary_file.cc
src/backend/codegen/tests/: clang_compiler_unittest.cc  code_generator_unittest.cc  codegen_pg_func_generator_unittest.cc  instance_method_wrappers_unittest.cc
src/backend/codegen/utils/: clang_compiler.cc  code_generator.cc  gpassert.cc  temporary_file.cc
src/backend/codegen/utils/examples/: CMakeLists.txt  materialize_tuple_ex.cc
(+5707 files in other folders)
